li/a aangepast en smartphone geschikt gemaakt

--- a/beroep.html
+++ b/beroep.html
@@ -12,10 +12,10 @@
 
 		<nav class="mainmenu">
 			<ul>
-				<a href="index.html" class="textdecor"><li class="thuis"><i class="fa fa-home slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Thuis</li></a>
-				<a href="nieuws.html" class="textdecor"><li class="cv"><i class="fa fa-newspaper-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Opleiding</li></a>
-				<a href="over.html" class="textdecor"><li class="over"><i class="fa fa-address-card-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Over</li></a>
-				<a href="beroep.html" class="textdecor"><li class="beroep"><i class="fa fa-handshake-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Beroep</li></a>
+				<li class="thuis"><a href="index.html" class="textdecor"><i class="fa fa-home slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Thuis</a></li>
+				<li class="cv"><a href="nieuws.html" class="textdecor"><i class="fa fa-newspaper-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Opleiding</a></li>
+				<li class="over"><a href="over.html" class="textdecor"><i class="fa fa-address-card-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Over</a></li>
+				<li class="beroep"><a href="beroep.html" class="textdecor"><i class="fa fa-handshake-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Beroep</a></li>
 			</ul>
 		</nav>
 
