--- a/over.html
+++ b/over.html
@@ -11,17 +11,17 @@
 	<header>
 		<nav class="mainmenu">
 			<ul>
-				<a href="index.html" class="textdecor"><li class="thuis"><i class="fa fa-home slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Thuis</li></a>
-				<a href="nieuws.html" class="textdecor"><li class="cv"><i class="fa fa-newspaper-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Opleiding</li></a>
-				<a href="over.html" class="textdecor"><li class="over"><i class="fa fa-address-card-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Over</li></a>
-				<a href="beroep.html" class="textdecor"><li class="beroep"><i class="fa fa-handshake-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Beroep</li></a>
+				<li class="thuis"><a href="index.html" class="textdecor"><i class="fa fa-home slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Thuis</a></li>
+				<li class="cv"><a href="nieuws.html" class="textdecor"><i class="fa fa-newspaper-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Opleiding</a></li>
+				<li class="over"><a href="over.html" class="textdecor"><i class="fa fa-address-card-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Over</a></li>
+				<li class="beroep"><a href="beroep.html" class="textdecor"><i class="fa fa-handshake-o slow-spin fa-3x fa-fw"></i><span class="sr-only"></span>Beroep</a></li>
 			</ul>
 		</nav>
 	</header>
 	<article class="pagebox">
 		<i class="marginicon fa fa-address-card-o fa-2x"></i><h1>Over</h1>
 		<p class="margin">Hallo mensen mijn naam is Olaf Touw. Ik ben 20 jaar ik zit op het Da Vinci College in Gorinchem. Mijn hobby's zijn Longboarden, gamen en met vrienden gezellig een biertje drinken in de stad.</p>
-		<img src="./img/cv.png">
+		<img class="cv" src="./img/cv.png">
 	</article>
 
 </body>
